welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
nearTen:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (num%10<=2){return true}} 
  ^