welcome.lessons.welcome.bat.bool2.RedTicket.scala.code
def redTicket(a:Int, b:Int, c:Int):Int = {
  if (a==2 &&b==2&&c==2){return 10}
  else if (a==b&&a==c){return 5}
  else if (b!=a&&c!=a){return 1}
  else return 0}